Closed
Bug 1196379
Opened 10 years ago
Closed 10 years ago
MOZ_ASSERT "shouldn't find rule in mMatchingRules that is not in aRules"
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla44
Tracking | Status | |
---|---|---|
firefox44 | --- | fixed |
People
(Reporter: khuey, Assigned: heycam)
References
Details
(Keywords: assertion)
Attachments
(2 files)
14.11 KB,
text/plain
|
Details | |
2.05 KB,
patch
|
dbaron
:
review+
|
Details | Diff | Splinter Review |
I hit the assertion at http://hg.mozilla.org/mozilla-central/annotate/d590b9601ba8/layout/style/CSSStyleSheet.cpp#l384 by installing ABP and then logging into Netflix in the same browser session. Will attach gdb session logs. I was not able to reproduce.
Flags: needinfo?(cam)
Reporter | ||
Comment 1•10 years ago
|
||
I was able to reproduce this reliably by installing ABP and then visiting this page:
http://simple-adblock.com/faq/testing-your-adblocker/
I hit the assertion every time.
Assignee | ||
Comment 3•10 years ago
|
||
Thanks Bill, I hit the assertion with that page too.
Comment 4•10 years ago
|
||
(I hit this when restoring a gmail tab in a debug build, too, FWIW.)
Assignee | ||
Comment 5•10 years ago
|
||
The assertion is wrong. It should have been checking that that was the state after finishing the loop advancing pm. Let's rewrite the assertion to be more clear about what it should be checking.
Assignee: nobody → cam
Status: NEW → ASSIGNED
Flags: needinfo?(cam)
Attachment #8672472 -
Flags: review?(dbaron)
Attachment #8672472 -
Flags: review?(dbaron) → review+
![]() |
||
Comment 7•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox44:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
You need to log in
before you can comment on or make changes to this bug.
Description
•