layout/style/CSSStyleSheet.cpp
@@ -351,12 +351,34 @@ nsDocumentRuleResultCacheKey::Finalize()
 #endif
 }
 
+#ifdef DEBUG
+static bool
+ArrayIsSorted(const nsTArray<css::DocumentRule*>& aRules)
+{
+  for (size_t i = 1; i < aRules.Length(); i++) {
+    if (aRules[i - 1] > aRules[i]) {
+      return false;
+    }
+  }
+  return true;
+}
+#endif
+
 bool
 nsDocumentRuleResultCacheKey::Matches(
                        nsPresContext* aPresContext,
                        const nsTArray<css::DocumentRule*>& aRules) const
 {
   MOZ_ASSERT(mFinalized);
+  MOZ_ASSERT(ArrayIsSorted(mMatchingRules));
+  MOZ_ASSERT(ArrayIsSorted(aRules));
+
+#ifdef DEBUG
+  for (css::DocumentRule* rule : mMatchingRules) {
+    MOZ_ASSERT(aRules.BinaryIndexOf(rule) != aRules.NoIndex,
+               "aRules must contain all rules in mMatchingRules");
+  }
+#endif
 
   // First check that aPresContext matches all the rules listed in
   // mMatchingRules.
@@ -382,8 +404,6 @@ nsDocumentRuleResultCacheKey::Matches(
   while (pr < pr_end) {
     while (pm < pm_end && *pm < *pr) {
       ++pm;
-      MOZ_ASSERT(pm >= pm_end || *pm == *pr,
-                 "shouldn't find rule in mMatchingRules that is not in aRules");
     }
     if (pm >= pm_end || *pm != *pr) {
       if ((*pr)->UseForPresentation(aPresContext)) {
